--- a/Introduction _to_python.ipynb
+++ b/Introduction _to_python.ipynb
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "d3265c98",
    "metadata": {},
    "outputs": [],
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "0c1baaee",
    "metadata": {},
    "outputs": [
@@ -1491,7 +1491,7 @@
        "'C:/Users/Trainee/Desktop/class_work/TemperatureVals.txt'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "65042b03",
    "metadata": {},
    "outputs": [
@@ -1522,6 +1522,7 @@
     }
    ],
    "source": [
+    "#open a file\n",
     "with open(data_file[0], \"r\") as d:\n",
     "    f_val = d.read().split()\n",
     "    \n",
@@ -1609,9 +1610,417 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "6c9cb600",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e85aab",
+   "metadata": {},
+   "source": [
+    "# Matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9548eee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "482a03b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "funmi\n",
+      "bola\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[\"name\", \"age\", \"score\"],\n",
+    "     [\"funmi\", \"27\", \"78\"],\n",
+    "     [\"bola\", \"30\", \"90\"]]\n",
+    "\n",
+    "print(a[0][0])\n",
+    "print(a[1][0])\n",
+    "print(a[2][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cd705b2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age\n",
+      "27\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[0][1])\n",
+    "print(a[1][1])\n",
+    "print(a[2][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f6810153",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "1 0\n",
+      "2 0\n",
+      "0 1\n",
+      "1 1\n",
+      "2 1\n",
+      "0 2\n",
+      "1 2\n",
+      "2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 3):\n",
+    "    for a in range(0, 3):\n",
+    "        print(a, i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b875eb9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>funmi</td>\n",
+       "      <td>27</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bola</td>\n",
+       "      <td>30</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name age score\n",
+       "0  funmi  27    78\n",
+       "1   bola  30    90"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(a[1:], columns=a[0])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2d0a972c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bola'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "269e63cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'funmi', 'bola']\n",
+      "['age', '27', '30']\n",
+      "['score', '78', '90']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(a)):\n",
+    "    index_value = []\n",
+    "    for n in a:\n",
+    "        index_value.append(n[i])\n",
+    "    print(index_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "88292cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['name', 'funmi', 'bola'], ['age', '27', '30'], ['score', '78', '90']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_arr = []\n",
+    "for i in range(0, 3):\n",
+    "    arr = []\n",
+    "    for n in a:\n",
+    "        arr.append(n[i])\n",
+    "    new_arr.append(arr)\n",
+    "print(new_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bd27d82a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3\n",
+      "0 4\n",
+      "0 5\n",
+      "1 3\n",
+      "1 4\n",
+      "1 5\n",
+      "2 3\n",
+      "2 4\n",
+      "2 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in range(0, 3):\n",
+    "    for n in range(3, 6):\n",
+    "        print(a, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "35016c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = [9, 10, 11, 2, 7]\n",
+    "\n",
+    "#sum any index that would give you 18\n",
+    "\n",
+    "for j in range(0, len(b)):\n",
+    "    for d in range(j+1, len(b)):\n",
+    "        k = [b[j], b[d]]\n",
+    "        if sum(k) == 20:\n",
+    "            print([j, d])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "dc0b8b77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [[\"name\", \"age\", \"score\"],\n",
+    "     [\"funmi\", \"27\", \"78\"],\n",
+    "     [\"bola\", \"30\", \"90\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93674547",
+   "metadata": {},
+   "source": [
+    "#create an array of a[0][2], a[1][1], a[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3b381ef2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('score', '27', 'bola')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0][2], a[1][1], a[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c2a820d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bola', '30', '90']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "a76ed912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 4, 9], [9, 10, 12, 8], [4, 43, 11, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_arr = [[1, 2, 4, 9],\n",
+    "           [9, 10, 12, 8],\n",
+    "           [4, 43, 11, 7]]\n",
+    "print(list_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "7a9a9b34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 9, 4], [2, 10, 43], [4, 12, 11], [9, 8, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_arr = []\n",
+    "for i in range(0, len(list_arr[0])):\n",
+    "    arr = []\n",
+    "    for n in list_arr:\n",
+    "        arr.append(n[i])\n",
+    "    new_arr.append(arr)\n",
+    "print(new_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3e06b731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [[\"name\", \"age\", \"score\"],\n",
+    "     [\"funmi\", \"27\", \"78\"],\n",
+    "     [\"bola\", \"30\", \"90\"]]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc53afc",
+   "id": "6075922e",
    "metadata": {},
    "outputs": [],
    "source": []
